# cmake_official_tutorial_practice

./: .clang-format  .clang-tidy  .gitignore  .nvim.lua  CPPLINT.cfg  Makefile  clean_builds.sh  config.mk.global  link_dotfiles_from_previous_dir.sh
10_adding_generator_expressions/MathFunctions/: CMakeLists.txt  MathFunctions.h
11_adding_export_config/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.h
12_official_example/: CMakeLists.txt
12_official_example/Hello/: CMakeLists.txt
1_basic_starting_point/: TutorialConfig.h.in
2_adding_a_library/: CMakeLists.txt
5_adding_system_introspection/MathFunctions/: mysqrt.cxx
6_adding_a_custom_cmd_and_generated_file/: CMakeLists.txt
8_adding_support_for_a_testing_dashboard/: CMakeLists.txt
8_adding_support_for_a_testing_dashboard/MathFunctions/: mysqrt.cxx
9_selecting_static_or_shared_libs/: CMakeLists.txt
9_selecting_static_or_shared_libs/MathFunctions/: CMakeLists.txt
archived_previous_attempt_krishna/10_adding_generator_expressions/: CMakeLists.txt  tutorial.cxx
archived_previous_attempt_krishna/11_adding_export_config/: CMakeLists.txt  tutorial.cxx
archived_previous_attempt_krishna/11_adding_export_config/MathFunctions/: MakeTable.cxx  MathFunctions.cxx  mysqrt.cxx
archived_previous_attempt_krishna/12_official_example/Demo/: CMakeLists.txt
archived_previous_attempt_krishna/1_basic_starting_point/: tutorial.cxx
archived_previous_attempt_krishna/2_adding_a_library/: tutorial.cxx
archived_previous_attempt_krishna/3_adding_usage_requirements_of_a_library/: CMakeLists.txt
archived_previous_attempt_krishna/3_adding_usage_requirements_of_a_library/MathFunctions/: CMakeLists.txt
archived_previous_attempt_krishna/4_installing_and_testing/MathFunctions/: CMakeLists.txt  mysqrt.cxx
archived_previous_attempt_krishna/5_adding_system_introspection/MathFunctions/: CMakeLists.txt
archived_previous_attempt_krishna/7_packaging_an_installer/: CMakeLists.txt
archived_previous_attempt_krishna/8_adding_support_for_a_testing_dashboard/: tutorial.cxx
archived_previous_attempt_krishna/8_adding_support_for_a_testing_dashboard/MathFunctions/: CMakeLists.txt
archived_previous_attempt_krishna/9_selecting_static_or_shared_libs/: tutorial.cxx
archived_previous_attempt_krishna/9_selecting_static_or_shared_libs/MathFunctions/: mysqrt.cxx
cmake-3.27.0-rc4-tutorial-source/Step1/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
cmake-3.27.0-rc4-tutorial-source/Step2/: CMakeLists.txt  plog  tutorial.cxx
cmake-3.27.0-rc4-tutorial-source/Step2/MathFunctions/: CMakeLists.txt  MathFunctions.cxx  mysqrt.cxx  mysqrt.h
cmake-3.27.0-rc4-tutorial-source/Step3/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
cmake-3.27.0-rc4-tutorial-source/Step3/MathFunctions/: CMakeLists.txt  MathFunctions.cxx  mysqrt.cxx
cmake-3.27.0-rc4-tutorial-source/Step4/: CMakeLists.txt  tutorial.cxx
cmake-3.27.0-rc4-tutorial-source/Step4/MathFunctions/: CMakeLists.txt
cmake-3.27.0-rc4-tutorial-source/Step5/: CMakeLists.txt  tutorial.cxx
cmake-3.27.0-rc4-tutorial-source/Step5/MathFunctions/: CMakeLists.txt  MathFunctions.cxx  MathFunctions.h
step1/: CMakeLists.txt
